refactor!: rename `selectorExpression` to `assetsSelector`  (#3099)
refactor: deprecate AssetSelectorExpression and rename ContractDefinition field

BREAKING CHANGE: "selector_expression" column in the sql contract
definition table must be renamed to "asset_selector"
